--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,12 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.4.1")
 
     //PICASSO
-    implementation 'com.squareup.picasso:picasso:2.71828'
+//    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //COIL
     implementation "io.coil-kt:coil:2.1.0"
+
+    // Add Dagger dependencies
+    implementation 'com.google.dagger:dagger:2.28.3'
+    kapt 'com.google.dagger:dagger-compiler:2.28.3'
 }
